# MemeOS

./: .gitignore  CMakeLists.txt  Makefile  bochsrc.bxrc  get_compiler.sh  kernel.cpp  licence  linker.ld  loader.asm  qui
ISO/boot/: MemeOS
ISO/boot/grub/: grub.cfg
drivers/filesystems/ext2/: ext2fs.h
drivers/filesystems/ext2/src/: ext2fs.cpp
drivers/keyboard/: keyboard.h  keyboard_layouts.h
drivers/keyboard/src/: keyboard.cpp
drivers/pc_speaker/src/: speaker.cpp
drivers/pci/: pci.h  pcivendors.hpp
drivers/pci/src/: pci.cpp
drivers/rtc/: time.h
drivers/rtc/src/: time.cpp
drivers/serial/: serial.h
drivers/serial/src/: serial.cpp
drivers/storage/: drive.h
drivers/storage/atapio/: atapio.h
drivers/storage/atapio/src/: atapio.cpp
drivers/storage/floppy/: floppy.h
drivers/storage/floppy/src/: floppy.cpp
drivers/text_term/: terminal.h
drivers/text_term/src/: terminal.cpp
drivers/timer/: pit.h
drivers/timer/src/: pit.cpp
libs/: ahci.cpp  asm_gdt.asm  asm_isr.asm  atapio.cpp  c_isr.cpp  ext2fs.cpp  gdt.cpp  gdt.h  idt.cpp  idt.h  io.h  isr.asm  keyboard.cpp  keyboard.h  keyboard_layouts.h  liballoc.cpp  memory.cpp  paging.cpp  panic.cpp  panic.h  pci.cpp  pic.cpp  pit.cpp  pit.h  serial.cpp  speaker.cpp  speaker.h  string.cpp  string.h  syscalls.cpp  terminal.cpp  terminal.h  time.cpp
libs/_old/: ahci.cpp  ahci.h  pci.h  string.cpp  string.h
libs/includes/: ahci.h  atapio.h  idt.h  io.h  liballoc.h  memory.h  multiboot.h  paging.h  pci.h  serial.h  string.h  syscalls.h  terminal.h
libs/includes/std/: stdio.h
libs/kernel/: gdt.h  idt.h  io.h  multiboot.h  paging.h  pic.h  tss.h
libs/kernel/src/: asm_isr.asm  asm_paging.asm  c_isr.cpp  gdt.cpp  idt.cpp  liballoc.cpp  paging.cpp  panic.cpp  pic.cpp  syscalls.cpp  tss.cpp
libs/old/: memory.cpp  memory.h
libs/std/: math.h  stdint.h  stdio.h  stream.h  string.h  vector.h
libs/std/src/: string.cpp
libs/sys/: syscall.h
shell/: shell.cpp  shell.h  testtask.asm
